<?xml version="1.0"?>
<package format="2">
  <name>visualize_driver</name>
  <version>0.1.0</version>
  <description>WebSocket server for visualizing IMU and GNSS data</description>

  <maintainer email="jiaqi.zhao@connect.polyu.hk">ZHAO Jiaqi PolyU TAS LAB</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <build_depend>libwebsocketpp-dev</build_depend>
  <build_depend>libjsoncpp-dev</build_depend>

  <exec_depend>libwebsocketpp-dev</exec_depend>
  <exec_depend>libjsoncpp-dev</exec_depend>
</package>